--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_with(model: [@product, @comment]) do |form| %>
+<%= form_with(model: [@product, comment]) do |form| %>
   <p>
     <%= form.text_area :body %>
   </p>
