--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,23 @@
-<strong>user</strong> <%= comment.user_id %> 
-  <p>
-    <%= comment.body %>
-  </p>
+
+<div class="border border-2 mt-1">
+
+  <div class="d-flex w-100 justify-content-between">
+    <h5 class="mb-1"><%= comment.user.username %></h5>
+    <small><%= comment.created_at %></small>
+  </div>
+  <div class="d-flex w-100 justify-content-between">
+    <p class="mb-1"><%= comment.body %></p>
+    <div>
+      <% if current_user == comment.user %>
+      <small><%= link_to "Edit", edit_product_comment_path(@product, comment) %></small>
+      <small><%= link_to "Delete", product_comment_path(@product, comment), data: {
+                  turbo_method: :delete,
+                  turbo_confirm: "Are you sure?"
+                  } %></small>
+      <% end %>
+    </div>
+
+  </div>
+</div>
+
+
