--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </head>
 
   <body>
@@ -16,10 +17,8 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Store</a>
 
-        <form class="d-flex w-50" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-dark" type="submit">Search</button>
-        </form>
+        <%= render 'products/search_template' %>
+
 
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
           <% unless current_user.present? %>
@@ -27,6 +26,7 @@
             <%= link_to "Log in",  new_user_session_path, class:"btn btn-dark" %>
           <% else %>
             <p class=""> Hello, <%= current_user.username %> </p>
+            <%= link_to "Shopping cart",  carts_path, class:"btn btn-dark" %>
             <%= link_to "Sign out", destroy_user_session_path, data: {
                     turbo_method: :delete }, class:"btn btn-dark" %>
           <% end %>
